its done but working on some tui experiences

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,21 @@
 cmake_minimum_required(VERSION 3.0)
 
+# --- Fetch FTXUI --------------------------------------------------------------
+include(FetchContent)
+
+set(FETCHCONTENT_UPDATES_DISCONNECTED TRUE)
+FetchContent_Declare(ftxui
+  GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui
+  GIT_TAG 91c5954fe27eb020e2de422be53c5fe0c9c6cd6b
+)
+
+FetchContent_GetProperties(ftxui)
+if(NOT ftxui_POPULATED)
+  FetchContent_Populate(ftxui)
+  add_subdirectory(${ftxui_SOURCE_DIR} ${ftxui_BINARY_DIR} EXCLUDE_FROM_ALL)
+endif()
+
+# ------------------------------------------------------------------------------
 project(airport)
 
 # C++11 standards
@@ -7,7 +23,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 
 add_executable(${PROJECT_NAME}
-    
+    src/mainmenu.cpp
     src/main.cpp
     src/airplane.cpp
     src/pasengerAirplane.cpp
@@ -16,6 +32,7 @@ add_executable(${PROJECT_NAME}
     src/unexperiencedPilot.cpp
     src/cargoAirplane.cpp
     src/flight.cpp
+    src/idGen.cpp
 
 
 
@@ -26,4 +43,12 @@ add_executable(${PROJECT_NAME}
 
 )
 
-target_include_directories(${PROJECT_NAME} PUBLIC include/)
+target_include_directories(${PROJECT_NAME} PRIVATE include src)
+target_link_libraries(${PROJECT_NAME}
+  PRIVATE ftxui::screen
+  PRIVATE ftxui::dom
+  PRIVATE ftxui::component # Not needed for this example.
+)
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
+
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "bin")
